--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,8 @@ libs = ['node_modules', 'lib']
 gas_reports = ["*"]
 optimizer = true
 optimizer_runs = 200
-solc_version = "0.8.20"
+solc_version = "0.8.21"
+via_ir = true
 
 remappings = [
     "@~/=src/",
@@ -13,5 +14,6 @@ remappings = [
     "@safe-protocol/contracts/=lib/safe-core-protocol/contracts/",
     "@chainlink/contracts/=node_modules/@chainlink/contracts/",
     "@chainlink/contracts-ccip/=node_modules/@chainlink/contracts-ccip/",
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@p256/verifier/=lib/p256-verifier/src/"
 ]
