--- a/foundry.toml
+++ b/foundry.toml
@@ -1,19 +1,9 @@
 [profile.default]
 src = 'src'
 out = 'out'
-libs = ['node_modules', 'lib']
-gas_reports = ["*"]
+libs = ['lib']
+fs_permissions = [{ access = "read", path = "./"}]
 optimizer = true
-optimizer_runs = 200
-solc_version = "0.8.21"
+optimizer_runs = 100000
+solc_version = "0.8.23"
 via_ir = true
-
-remappings = [
-    "@~/=src/",
-    "@aa/=lib/account-abstraction/",
-    "@safe-protocol/contracts/=lib/safe-core-protocol/contracts/",
-    "@chainlink/contracts/=node_modules/@chainlink/contracts/",
-    "@chainlink/contracts-ccip/=node_modules/@chainlink/contracts-ccip/",
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
-    "@p256/verifier/=lib/p256-verifier/src/"
-]
